Fix scroll on iOS

--- a/src/scss/_body.scss
+++ b/src/scss/_body.scss
@@ -1,4 +1,5 @@
 html, body{
+    position: fixed;
     margin: 0;
     padding: 0;
     height: 100%;
